--- a/android/examples/SubscribeAtBoot/AndroidManifest.xml
+++ b/android/examples/SubscribeAtBoot/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.pubnub.examples.subscribeAtBoot"
-          android:permission="android.permission.RECEIVE_BOOT_COMPLETED"
-
+          package="com.pubnub.examples.subscribeAtBoot2"
+		  android:installLocation="internalOnly"
           android:versionCode="1"
           android:versionName="1.0">
 
@@ -15,15 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
-        <activity android:name=".HelloWorldActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
-
-
-        <receiver android:name=".BootReceiver">
+        <receiver android:name=".BootReceiver" android:exported="true" android:enabled="true" android:label="BootReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
